# WebRays

./: CMakeLists.txt  Dockerfile  README.md  compile.sh  dependencies.sh  main.cpp  main.html  main.js  main.py  main.wasm  main.wasm.map  nginx.conf
App/: App.cpp  App.h
Camera/: Camera.cpp  Camera.h
Color/: Color.cpp  Color.h
Config/: Config.cpp  Config.h
Event/: EventManager.cpp  EventManager.h
Image/: Image.cpp  Image.h
Lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h
Logger/: Logger.cpp  Logger.h
Materials/: Material.cpp  Material.h
Objects/: Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Ray/: HitInfo.cpp  HitInfo.h  Ray.cpp  Ray.h
Scene/: Scene.cpp  Scene.h
Scripts/: UI.js
Shell/: shell.html
Vector3/: Vector3.cpp  Vector3.h
